Исправлены недочеты в классе BigBangTheory